<resources>

    <string name="app_name">BlåttLys Parkering</string>
    <string name="welcome">Existing user:</string>
    <string name="submit">Submit</string>
    <string name="newUser">New user:</string>
    <string name="btnNewUser">Register new user</string>
    <string name="car_text">Car</string>
    <string name="zone_text">Zone</string>
    <string name="city_text">City</string>
    <string name="text_city_hint">Enter City</string>
    <string name="start_parking_string">Start Parking</string>
    <string name="stop_parking_string">Stop Parking</string>
    <string name="zone_price_per_hour_string">Price per Hour</string>
    <string name="telephone">Telephone:</string>
    <string name="password">Password:</string>
    <string name="reg_user">Register User:</string>
    <string name="mail">Mail:</string>
    <string name="first_name">First name:</string>
    <string name="sure_name">Sure name:</string>
    <string name="address">Address:</string>
    <string name="postal_address">Postal address:</string>
    <string name="postal_number">Postal number:</string>
    
    <string-array name="spinner_car">
        <item>AA76324</item>
        <item>AB25947</item>
    </string-array>
    <string-array name="spinner_city">
        <item>Halden</item>
        <item>Sarpsborg</item>
        <item>Fredrikstad</item>
    </string-array>
    <string-array name="spinner_zone">
        <item>001</item>
        <item>002</item>
        <item>003</item>
    </string-array>
    <string name="pick_date">Pick date</string>
    <string name="register_manually">Register manually:</string>
    <string name="log_in">Log in</string>
</resources>
