<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/reg_user"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtRegPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="80dp"
                android:text="@string/telephone" />

            <TextView
                android:id="@+id/txtRegPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtRegPhone"
                android:layout_below="@+id/txtRegPhone"
                android:layout_marginTop="41dp"
                android:text="@string/password" />

            <TextView
                android:id="@+id/txtRegMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtRegPassword"
                android:layout_below="@+id/txtRegPassword"
                android:layout_marginTop="32dp"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/txtRegFirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtRegMail"
                android:layout_below="@+id/txtRegMail"
                android:layout_marginTop="40dp"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/txtRegAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtRegFirstname"
                android:layout_below="@+id/txtRegFirstname"
                android:layout_marginTop="40dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/txtRegPostalAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtRegAddress"
                android:layout_below="@+id/txtRegAddress"
                android:layout_marginTop="40dp"
                android:text="@string/postal_address" />

            <TextView
                android:id="@+id/txtRegPostalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtRegPostalAddress"
                android:layout_below="@+id/txtRegPostalAddress"
                android:layout_marginTop="40dp"
                android:text="@string/postal_number" />

            <EditText
                android:id="@+id/etRegPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRegPhone"
                android:layout_marginRight="36dp"
                android:layout_toRightOf="@+id/txtRegPhone"
                android:ems="10"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etRegPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRegPassword"
                android:layout_alignLeft="@+id/etRegPhone"
                android:layout_marginRight="36dp"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etRegMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRegMail"
                android:layout_alignLeft="@+id/etRegPhone"
                android:layout_marginRight="36dp"
                android:layout_toRightOf="@+id/txtRegPassword"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etRegName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRegFirstname"
                android:layout_alignLeft="@+id/etRegPhone"
                android:layout_marginRight="36dp"
                android:layout_toRightOf="@+id/txtRegFirstname"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etRegAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRegAddress"
                android:layout_alignLeft="@+id/etRegPhone"
                android:layout_marginRight="36dp"
                android:layout_toRightOf="@+id/txtRegAddress"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/etRegPostalAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRegPostalAddress"
                android:layout_marginRight="36dp"
                android:layout_toRightOf="@+id/txtRegPostalAddress"
                android:ems="10"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/etRegPostalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtRegPostalNumber"
                android:layout_marginRight="36dp"
                android:layout_toRightOf="@+id/txtRegPostalNumber"
                android:ems="10"
                android:inputType="numberSigned" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSubmitUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="btnSubmitUser"
        android:text="@string/submit" />

</RelativeLayout>